lib/tests/fixtures/compiler/parser/return_in_application.baseline
Error: return_in_application.pp:3:9: return statement cannot be used inside an application statement.
  return
  ^~~~~~
