lib/tests/fixtures/compiler/parser/return_in_application.pp
application foo() {
    if true {
        return
    }
}
